//
//  AccessibilyIdentifier.swift
//  Stargazers
//
//  Created by Alessio Quattrocchi on 20/11/22.
//

import Foundation

import Foundation

public struct AccessibilityIdentifier {
    static let repoField = "AccessibilityIdentifierRepoField"
    static let ownerField = "AccessibilityIdentifierOwnerField"
    static let confirmBtn = "AccessibilityIdentifierConfirmBrn"
    static let cancelBtn = "AccessibilityIdentifierCancelBrn"
}
